fix: remove white blocks in scrollbar corner

--- a/static/css/scrollbar.css
+++ b/static/css/scrollbar.css
@@ -16,6 +16,10 @@
   background-color: #858585;
 }
 
+*::-webkit-scrollbar-corner {
+    background-color: transparent;
+}
+
 .series-list::-webkit-scrollbar,
 .sidebar-content::-webkit-scrollbar {
     width: 0; /* Chrome */
